--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@ Bootstrap 5 HTML CSS Template
                                     <a class="nav-link click-scroll" href="#section_5">Contact Us</a>
                                 </li>
                             </ul>
-
-                            
+                            <div class="ms-lg-3">
+                                <a class="btn custom-btn custom-border-btn" href="Preorders.html">
+                                   Scented Preorders
+                                    <i class="bi-arrow-up-right ms-2"></i>
+                                    
                                 </a>
                             </div>
                         </div>
