--- a/services.html
+++ b/services.html
@@ -248,9 +248,9 @@ Bootstrap 5 HTML CSS Template
                                         <div class="d-flex">
                                             <h6>Citrus</h6>
                                         
-                                            <span class="">195</span>
+                                            <span class=""></span>
 
-                                            <strong class="ms-auto"></strong>
+                                            <strong class="ms-auto">195</strong>
                                         </div>
 
                                         <div class="border-top mt-2 pt-2">
