--- a/team.html
+++ b/team.html
@@ -41,7 +41,7 @@ Bootstrap 5 HTML CSS Template
                 <nav class="navbar navbar-expand-lg">                
                     <div class="container">
                         <a class="navbar-brand d-flex align-items-center" href="index.html">
-                            <img src="images/coffee-beans.png" class="navbar-brand-image img-fluid" alt="">
+                            <img src="" class="navbar-brand-image img-fluid" alt="">
                           ScentedCrafted Luminries
                         </a>
         
@@ -194,7 +194,7 @@ Bootstrap 5 HTML CSS Template
                                     </div>
                                     
                                     <div class="team-block-image-wrap">
-                                        <img src="images/janeth.jpg" class="team-block-image img-fluid" alt="">
+                                        <img src="images/mj.jpg" class="team-block-image img-fluid" alt="">
                                     </div>
                                 </div>
                             </div>
