--- a/partners.html
+++ b/partners.html
@@ -87,7 +87,7 @@ Bootstrap 5 HTML CSS Template
                         <div class="row justify-content-center">
 
 
-                                <h2 class="text-black">Our Partners</h2>
+                                <h2 class="text-black" style="text-align:center">Our Partners</h2>
                             </div>
 
                             <div class="timeline">
