--- a/reservation.html
+++ b/reservation.html
@@ -171,8 +171,8 @@ Bootstrap 5 HTML CSS Template
                                 <strong class="text-white">
                                     <i class="bi-geo-alt me-2"></i>
                                     Poblacion, San Ildefonso, Bulacan
-                                </strong>
-
+                                </strong><br>
+                                <br></br><br></br>
                                 <ul class="social-icon mt-4">
                                     <li class="social-icon-item">
                                         <a href="#" class="social-icon-link bi-facebook">
