--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@ Bootstrap 5 HTML CSS Template
 
                                 <h2 class="text-white mb-3">SC Luminaries</h2>
 
-                                <p class="text-white">Welcome to ScentedCrafted Luminaries, where we transfor moments into memories with the enchanting power of fragrance. Our journey began with a passion for crafting scented candles that go beyond illumination; they evoke
+                                <p class="text-white">Welcome to ScentedCrafted Luminaries, where we transform moments into memories with the enchanting power of fragrance. Our journey began with a passion for crafting scented candles that go beyond illumination; they evoke
                                     emotions and create lasting impressions.</p>
                                 <p class="text-white">What sets us apart is our commitment to quality and uniqueness. Each candle is meticulously hand-poured
                                     using premium ingredients to ensure a rich, long-lasting scent experience. From soothing lavender to
